tests/semantic/valid/67_i3_string_infer.hulk
function tag(s) => "x" @ s;

print(tag("a"));
