tests/semantic/invalid/58_t_call_arg_type.hulk
function add_one(x:Number):Number => x + 1;
print(add_one("hello"));
